--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <h1>Karayel Meze Balık</h1>
+        <img src="karayelmezebalik.jpg" alt="Karayel meze balık">
     </header>
 
     <nav class="menu-categories">
