--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <header>
-        <img src="karayelmezebalik.jpg" alt="Karayel meze balık">
+    <header style="display: flex; justify-content: center; margin-bottom: 1rem;">
+        <img  width="250px" src="karayelmezebalik.png" alt="">
     </header>
 
     <nav class="menu-categories">
